force-app/main/default/objects/Book_Reservation__c/Book_Reservation__c.object-meta.xml
<CustomObject>
    <label>Book Reservation</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Book Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>