force-app/main/default/objects/Book_Reservation__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <label>Book</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a Paper Book!</errorMessage>
        <filterItems>
            <field>Book__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paper Book</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Book Reservations</relationshipLabel>
    <relationshipName>Book_Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>