force-app/main/default/objects/Book_Reservation__c/fields/Bookstore__c.field-meta.xml
<CustomField>
    <fullName>Bookstore__c</fullName>
    <label>Bookstore</label>
    <referenceTo>Bookstore__c</referenceTo>
    <relationshipLabel>Book Reservations</relationshipLabel>
    <relationshipName>Book_Reservations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>