force-app/main/default/objects/Book_Reservation__c/validationRules/Quantity_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_VR</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Book quantity must be greater than 0</errorMessage>
</ValidationRule>